--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.3.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/chai": "^4.3.4",
     "antd": "^5.3.0",
+    "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
     "bootstrap": "5.2.3",
     "chart.js": "^4.2.1",
@@ -47,7 +49,7 @@
     "web-vitals": "^3.1.1"
   },
   "scripts": {
-    "start": " react-scripts --openssl-legacy-provider start",
+    "start": " react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
